# Point-clouds

./: .gitignore  CMakeLists.txt  build.py  build.sh  bundle.txt  clangfmt.sh  demo.py  design.md  info.json  pack.py  pack_to_jbf_tar.py  sanity_checks.txt  smart_sha.py
chatGPT/: README.txt  c.txt  nv  splitter3.py
chatGPT/include/: axis_permutatie.h  bdrm_lru.cuh  config.h  consts.cuh  device_buffer.cuh  merge_split.cuh  morton_utils.cuh  orchestratie.h  otndc.h  types.cuh  types.h  wiskunde_utils.cuh
chatGPT/scripts/: compute_sha256.sh
chatGPT/src/: demo_orchestratie_main.cpp  h_axis_fit.cu  h_do_optimize_frame3.cpp  h_merge_split.cu  h_orchestratie.cpp  h_orchestratie3.xcpp  h_region_queue.cu  k_direction_vote_bdrm.cu  k_label_sort.cu  k_merge_split.cu  k_otndc.cu  k_pairs_bucket.cu  k_planair_regressie.cu  k_r1r2_filter.cu  k_reduce_groepen.cu  k_rotatie_quat.cu  k_voxeliseer_morton.cu  otndc_host.cu  readme.txt
include/: assen_hernoemen.h  autofit.h  autofit_impl.h  axis.h  axis_permutatie.h  config.h  consts.cuh.old  device_buffer.cuh  grid_utils.h  includes.h  k_vox  math_utils.cuh  merge_split.cuh  morton_config.h  morton_utils.cuh  orchestratie.h  pairs_bucket.cuh  pipe_fitting_detector.h  pipe_types.h  planaire_regressie.cuh  point.h  strict.h  types.cuh  types.cuh.old  voxel_params.h  voxelprocessor.h  wiskunde_utils.cuh
legacy/chatGPT_old/: demo_axis  demo_axis2  nv
legacy/chatGPT_old/ch1c/: bundle.txt
legacy/chatGPT_old/ch1c/include/: PipeFittingDetector.h  pipetypes.h
legacy/chatGPT_old/ch1c/src/: PipeFittingDetector.cpp
legacy/chatGPT_old/docs/: README_BDRM.txt  README_PARTS.txt
legacy/chatGPT_old/include/: bdrm_lru.cuh  cc_adapter.h  config.h  consts.cuh  morton_utils.cuh  otndc.h  types.cuh
legacy/chatGPT_old/scripts/: build_nv.sh
legacy/chatGPT_old/tools/: split_and_verify.py
legacy/old_voxel/Thrust-test/: thrust_policy_test  thrust_policy_test.cu  thrust_test  thrust_test.cu
legacy/old_voxel/Thrust-test/include/: morton_utils.cuh
legacy/old_voxel/Thrust-test/src/: voxel_kernels.cu
legacy/old_voxel/ch1a/: AutofitImpl::doOptimizeFrame2  splitter4.py
legacy/old_voxel/ch1a/include/: otndc.h
legacy/old_voxel/ch1a/src/: demo_otndc.cpp  k_otndc.cu  k_otndc_pairs.cu  otndc_host.cpp
legacy/old_voxel/ch1b/include/: PipeFittingDetector.h  otndc.h  otndc_utils.cuh
legacy/old_voxel/ch1b/src/: PipeFittingDetector.cpp  k_otndc.cu  otndc_host.cu
legacy/old_voxel/chatGPT_src_old/: demo_axis.cpp  h_axis_fit.cu  h_do_optimize_frame3.cpp  h_merge_split.cu  h_orchestratie.cpp  h_orchestratie3.xcpp  k_direction_vote_bdrm.cu  k_otndc.cu  k_pairs_bucket.cu  k_rotatie_quat.cu  k_voxeliseer_morton.cu
legacy/old_voxel/include/: consts.cuh  math_utils.cuh  morton_utils.cuh  planaire_regressie.cuh  types.cuh  vlak_types.h  voxel_params.h  voxelprocessor.h
legacy/old_voxel/src/: k_vlak_seeds.cu  plane_vote.cu  vlak_detectie_kernels.cu  vlak_orchestratie.cpp  voxel_kernels.cu
src/: autofit.cpp  autofit_impl.cpp  ds  grid_utils.cpp  h_region_queue.cu  k_label_sort.cu  k_merge_split.cu  k_planair_regressie.cu  k_r1r2_filter.cu  k_reduce_groepen.cu  k_ruis_boeren2buur.cu  k_vlak_seeds.cu  k_voxeliseer_morton.cu  otndc_host.cu  pipe_fitting_detector.cpp  point.cpp  vlak_orchestratie.cpp  voxelprocessor.cpp  wedge_vote.cu
src/demo/: demo_axis2.cpp  demo_orchestratie_main.cpp
